feat: implement reward function